--- a/templates/publish.html
+++ b/templates/publish.html
@@ -4,11 +4,12 @@
       	<script type = "text/javascript" src = "{{ url_for('static', filename = 'hello.js') }}" ></script>
    	</head>
 	<body>
-		<form action = "http://localhost:5000/result" method = "POST" enctype = "multipart/form-data">
+		<h1>Publish New Exhibition</h1>
+		<form action = "http://localhost:5000/onpublish" method = "POST" enctype = "multipart/form-data">
 			<p>Name <input type = "text" name = "exname" /></p>
 			<p>Category <select name="excat">
 				{% for c in cats %}
-				<option value="{{ c[0] }}">{{ c[1] }}</option>
+					<option value="{{ c['cat_id'] }}">{{ c['cat_name'] }}</option>
 				{% endfor %}
 			</select></p>
 			<p>Address <textarea name="exaddress" placeholder="Address"></textarea></p>
