--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
-<html>
-    <body>
-        <h1>Exhibition Hub</h1>
-        {{ sess }}
-    </body>
-</html>
+{% extends "layouts/navbar.html" %}
+
+{% block content %}
+    <div class="container mainblock">
+        <h1>Exhibition Planning System</h1>
+    </div>
+{% endblock %}
