--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -12,7 +12,7 @@
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Exhibitions <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="http://127.0.0.1:5000/search">All Exhibitions</a></li>
-
+                        <li><a href="http://127.0.0.1:5000/myparts">My Exhibitions</a></li>
                         {% if sess.ut_type=='exhibitor' %}
                             <li><a href="http://127.0.0.1:5000/publishedbyme">My Exhibitions</a></li>
                             <li><a href="http://127.0.0.1:5000/publish">Publish Exhibition</a></li>
