--- a/templates/publish.html
+++ b/templates/publish.html
@@ -1,34 +1,75 @@
-<html>
-	<head>
-      	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'test.css') }}">
-      	<script type = "text/javascript" src = "{{ url_for('static', filename = 'hello.js') }}" ></script>
-   	</head>
-	<body>
-		<h1>Publish New Exhibition</h1>
-		<form action = "http://localhost:5000/onpublish" method = "POST" enctype = "multipart/form-data">
-			<p>Name <input type = "text" name = "exname" /></p>
-			<p>Category <select name="excat">
+{% extends "layouts/navbar.html" %}
+
+{% block content %}
+<div class="container mainblock">
+	<h1>Publish New Exhibition</h1>
+	<form action = "http://localhost:5000/onpublish" method = "POST" enctype = "multipart/form-data" class="form-horizontal">
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="exname">Name : </label>
+			<div class="col-sm-10">
+				<input type = "text" name = "exname" id="exname" class="form-control"/>
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="excat">Category :</label>
+			<div class="col-sm-10">
+				<select name="excat" id="excat" class="form-control">
 				{% for c in cats %}
-					<option value="{{ c['cat_id'] }}">{{ c['cat_name'] }}</option>
+					<option value="{{ c['cat_id'] }}">{{ c['cat_name'].title() }}</option>
 				{% endfor %}
-			</select></p>
-			<p>Address <textarea name="exaddress" placeholder="Address"></textarea></p>
-			<p>City 
-				<select name="excity">
+				</select>
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="exaddress">Address </label>
+			<div class="col-sm-10">
+				<textarea name="exaddress" placeholder="Address" id="exaddress" class="form-control"></textarea>
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="excity">City</label>
+			<div class="col-sm-10">
+				<select name="excity" id="excity" class="form-control">
 					<option value="mumbai">Mumbai</option>
 					<option value="delhi">Delhi</option>
 					<option value="banglore">Banglore</option>
 					<option value="pune">Pune</option>
 					<option value="madras">Madras</option>
 				</select>
-			</p>
-			<p>Starting at <input type = "datetime-local" name = "exstart" id="ixs" /></p>
-			<p>Ending at <input type ="datetime-local" name = "exend" id="ixe" /></p>
-			<p><input type="radio" name="exvrr" value="yes">Yes</p>
-			<p><input type="radio" name="exvrr" value="no">No</p>
-			<p>Description <textarea name="exnote" placeholder="Description"></textarea></p>
-			<p><input type="file" name="exdoc"/></p>
-			<p><input type = "submit" name = "exsubmit" onClick="return tsformat()" /></p>
-		</form>
-	</body>
-</html>
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="ixs">Starting at :</label>
+			<div class="col-sm-10">
+				<input type = "datetime-local" name = "exstart" id="ixs" class="form-control" />
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="ixe">Ending at :</label>
+			<div class="col-sm-10">
+				<input type ="datetime-local" name = "exend" id="ixe"  class="form-control"/>
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="exvrr">Are visitors allowed</label>
+			<div class="col-sm-10">
+				<input type="radio" name="exvrr" value="yes" id="exvrr">&nbsp&nbspYes&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+				<input type="radio" name="exvrr" value="no">&nbsp&nbspNo
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="exnote">Description</label>
+			<div class="col-sm-10">
+			 	<textarea name="exnote" placeholder="Description" id="exnote" class="form-control"></textarea>
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="exdoc">Upload File</label>
+			<div class="col-sm-10">
+				<input type="file" name="exdoc" id="exdoc" class="form-control"/>
+			</div>
+		</div>
+		<div class="form-group"><input type = "submit" name = "exsubmit" onClick="return tsformat()"  class="form-control btn btn-primary"/></div>
+	</form>
+</div>
+{% endblock %}
