--- a/templates/regs.html
+++ b/templates/regs.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mainblock">
-	<h2>{{ ename.title() }}</h2>
+	<h2>{{ regs[0].ex_name }}</h2>
 	<ul class="nav nav-pills nav-justified">
 		<li class="active"><a data-toggle="tab" href="#enterprises">Enterprises</a></li>
 		<li><a data-toggle="tab" href="#visitors">Visitors</a></li>
