--- a/templates/publish.html
+++ b/templates/publish.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container mainblock">
 	<h1>Publish New Exhibition</h1>
-	<form action = "http://localhost:5000/onpublish" method = "POST" enctype = "multipart/form-data" class="form-horizontal">
+	<form action = "http://127.0.0.1:5000/onpublish" method = "POST" enctype = "multipart/form-data" class="form-horizontal">
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="exname">Name : </label>
 			<div class="col-sm-10">
