--- a/templates/editex.html
+++ b/templates/editex.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container mainblock">
 	<h1>Publish New Exhibition</h1>
-	<form action = "http://localhost:5000/update" method = "POST" enctype = "multipart/form-data" class="form-horizontal">
+	<form action = "http://127.0.0.1:5000/update" method = "POST" enctype = "multipart/form-data" class="form-horizontal">
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="exname">Name : </label>
 			<div class="col-sm-10">
@@ -70,7 +70,7 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<center><input type = "submit" name = "exsubmit" onClick="return tsformat()"  class="form-control btn btn-primary"/></center>
+			<center><button type = "submit" name = "exupdate" onClick="return tsformat()" value="{{ ex.ex_id }}" class="form-control btn btn-primary">Update</button></center>
 		</div>
 	</form>
 </div>
